Rebase from master

--- a/test/docs/net/sf/freecol/architecture/_ArchitectureDocTest.approved.adoc
+++ b/test/docs/net/sf/freecol/architecture/_ArchitectureDocTest.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 = Architecture doc test
 
