--- a/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementDocTest.testPricing.approved.adoc
+++ b/test/docs/net/sf/freecol/server/model/_ServerIndianSettlementDocTest.testPricing.approved.adoc
@@ -1,5 +1,5 @@
 ifndef::ROOT_PATH[:ROOT_PATH: ../../../../..]
-ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/rules/classic]
+ifndef::RESOURCES_PATH[:RESOURCES_PATH: {ROOT_PATH}/../../data/default]
 
 [#net_sf_freecol_server_model_serverindiansettlementdoctest_testpricing]
 = TestPricing
